--- a/css/potato.css
+++ b/css/potato.css
@@ -354,7 +354,7 @@ input[type="checkbox"] + label {
 hr {
   position: relative;
   width: 90%;
-  margin: 0 auto;
+  margin: 30px auto;
   border: solid #ccc;
   border-width: 1px 0 0;
   clear: both;
