--- a/stylesheets/css/potato.css
+++ b/stylesheets/css/potato.css
@@ -643,16 +643,31 @@ pre code {
   padding: 0;
   background-color: transparent;
   border-radius: 0;
+  border: 0;
 }
 
-code,
-kbd {
+code {
   background-color: #ededed;
   font-size: 13px;
   margin: 0;
   padding: 3px 6px;
   border-radius: 3px;
+  border: 1px solid #ccc;
 }
+
+ kbd {
+  display: inline-block;
+  background-color: #f7f7f7;
+  font-size: 13px;
+  margin: 0;
+  padding: 3px 6px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  vertical-align: middle;
+  box-shadow: inset 0 -1px 0 #bbb;
+}
+
+/* Panel */
 
 .panel {
   padding: 10px 15px;
