--- a/stylesheets/css/modal.css
+++ b/stylesheets/css/modal.css
@@ -1,36 +1,77 @@
-.modal {
-
+body,html {
+  width: 100%;
+  height: 100%;
+  transition: overflow 0s linear 3s;
 }
 
-.modal-wrapper {
+body.no-scroll {
+  overflow: hidden;
+  transition: overflow 0s linear 3s;
+  /*transition: padding 0s linear 0s;*/
+}
+
+.modal {
   position: fixed;
+  display: block;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100vw;
-  height: 100vw;
+  z-index: 1000;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background: rgba(0,0,0,0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .15s linear;
 }
 
-.modal .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
+.modal.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal .modal-dialog {
+  position: relative;
+  margin: 10px;
+  transform: translateY(-25%);
+  max-width: 500px;
+  transition: transform .3s ease-out;
+}
+
+.modal.open .modal-dialog {
+  transform: translateY(0%);
+}
+
+@media (min-width: 576px) {
+  .modal .modal-dialog {
+    margin: 30px auto;
+  }
+}
+
+.modal-content {
+  position: relative;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.5);
+  background-color: #fff;
+  border: 1px solid #808080;
+  border-radius: 5px;
 }
 
-.modal .modal-content {
-  position: relative;
-  left: 50%;
-  top: 30px;
-  transform: translateX(-50%);
-  border: 1px solid #777;
-  border-radius: 5px;
-  max-width: 500px;
-  background-color: #fff;
-  height: 1000px;
+.modal .modal-content .close-button {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  background-color: transparent;
+  font-size: 24px;
+  font-weight: bold;
+  color: #7a7a7a;
+  border: none;
+  cursor: pointer;
+}
+
+.modal .modal-content .close-button:hover {
+  color: #2a2a2a;
 }
 
 .modal .modal-content .modal-header,
@@ -65,14 +106,4 @@
 
 .modal .modal-content .modal-footer a.button {
   margin-right: 5px;
-}
-
-.modal .modal-content .modal-header .close-button {
-  position: absolute;
-  right: 15px;
-  top: 10px;
-  border: none;
-  background-color: transparent;
-  font-size: 24px;
-  cursor: pointer;
 }
