--- a/stylesheets/less/_partials/_mixins.less
+++ b/stylesheets/less/_partials/_mixins.less
@@ -4,14 +4,12 @@
     border: 1px solid @border-color;
 }
 
-.mixin-button-color(@background-color: @white-color, @color: @primary-color)
-{
+.mixin-button-color(@background-color: @white-color, @color: @primary-color) {
     background-color: @background-color;
     color: @color;
 }
 
-.mixin-button-size(@pad1, @pad2, @font)
-{
+.mixin-button-size(@pad1, @pad2, @font) {
     padding: @pad1 @pad2;
     font-size: @font;
 }
