--- a/stylesheets/sass/_partials/_typography.scss
+++ b/stylesheets/sass/_partials/_typography.scss
@@ -6,16 +6,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @for $i from 1 through 6 {
-	$math: ( 7 - $i );
-	h#{$math} {
-		@if $i < 2 {
+    $math: (7 - $i);
+    h#{$math} {
+        @if $i < 2 {
             font-size: 1rem;
-        }
-        @else {
+        } @else {
             font-size: ( $i/$heading-font-size-divisory-denominator ) +  .75rem;
         }
         @media only screen and (min-width: 40rem) {
             font-size: ( $i/$heading-font-size-divisory-denominator ) +  .875rem;
         }
-	}
+    }
 }
