--- a/stylesheets/sass/_partials/_variables.scss
+++ b/stylesheets/sass/_partials/_variables.scss
@@ -13,7 +13,7 @@ $danger-color: #e74c3c;
 //* Base traits *//
 
 $base-font-face: "https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i";
-$base-font-family: "Roboto", "Helvetica Neue", "Helvetica", Arial, Sans-Serif;
+$base-font-family: "Roboto", "Helvetica Neue", "Helvetica", Arial, sans-serif;
 $base-font-size: 100%; // Consider switching to 16px declaration?
 $base-line-height: 1.5;
 $base-text-color: $primary-color;
