Added image thumbnails
Added image thumbnails, made css and less files for when it is
configured properly

--- a/stylesheets/css/potato.css
+++ b/stylesheets/css/potato.css
@@ -751,3 +751,17 @@ kbd {
 	color: #e74c3c;
 	border: 1px solid #e74c3c;
 }
+
+/* Images */
+
+img {
+	max-width: 100%;
+}
+
+.img-thumb {
+	border: 1px solid #333;
+}
+
+.img-thumb.round {
+	border-radius: 4px;
+}
