Move changes to SCSS version

--- a/stylesheets/sass/modules/_list.scss
+++ b/stylesheets/sass/modules/_list.scss
@@ -1,6 +1,13 @@
-//* Lists *//
+/* lists */
 
-//* Unordered list markers *//
+.inline-potato {
+	display: inline;
+	padding: 0;
+
+	li {
+		display: inline;
+	}
+}
 
 .circle-potato {
 	list-style-type: circle;
