Move changes to LESS version
add gulp 'less' task
add gulp 'postprocess' task
move browserslist to 'package.json'
remove '-{small,medium,large}' potato postfix

--- a/stylesheets/less/modules/_helpers.less
+++ b/stylesheets/less/modules/_helpers.less
@@ -1,4 +1,4 @@
-//* Utilities *//
+/* Helpers */
 
 .text-center {
 	text-align: center;
@@ -45,5 +45,18 @@
 
 	&-y {
 		overflow-y: auto;
+	}
+}
+
+.hide-overflow,
+.forbid-overflow {
+	overflow: hidden;
+
+	&-x {
+		overflow-y: hidden;
+	}
+
+	&-y {
+		overflow-y: hidden;
 	}
 }
